<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">P1</string>
    <string name="welcome">Bienvenido</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="register_button">Registrarse</string>
    <string name="forgot_password">¿Olvidó su contraseña?</string>
</resources>